--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "QuickChatGPT"
-version = "1.0"
+version = "1.1
 authors = [
     { name="Villak44", email='metalvillak@gmail.com' },
 ]
