--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ﻿attrs==23.1.0
 beautifulsoup4==4.12.2
 undetected_chromedriver==3.5.4
+python3-distutils
 certifi==2023.11.17
 cffi==1.16.0
 h11==0.14.0
